--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# OS generated files
+
+.DS_Store
+
+ehthumbs.db
+
+Thumbs.db
+
+# SVN
+.svn/
+
 # Prerequisites
 *.d
 
@@ -50,3 +61,8 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# build 
+build/
+
+
